<resources>
    <string name="app_name">pricetaxtipcalculator</string>
    <string name="price">Price :</string>
    <string name="province">Province :</string>
    <string name="tip_rate">Tip rate :</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="persons">Persons :</string>
    <string name="_10">10%</string>
    <string name="submit">SUBMIT</string>
</resources>
